# labs-system-modeling-cxx

./: .gitignore  CMakeLists.txt
lab7/: CMakeLists.txt  main.cpp
lab7/headers/: kolmogorovs_check.h  normal_distribution.h  pearsons_check.h  system_modeling.h  system_state.h  time_frame.h  variant_3.h  variant_4.h
lab7/sources/: helpers.cpp  kolmogorovs_check.cpp  normal_distribution.cpp  pearsons_check.cpp  system_modeling.cpp  system_state.cpp  time_frame_type.cpp
lab8/: CMakeLists.txt  main.cpp
lab8/headers/: helpers.h  kolmogorovs_check.h  normal_distribution.h  pearsons_check.h  system_modeling.h  system_state.h  time_frame.h  time_frame_type.h  variant_3.h  variant_4.h
lab8/sources/: kolmogorovs_check.cpp  pearsons_check.cpp  system_modeling.cpp  system_state.cpp  time_frame.cpp
